# SDEx-enrypted-communicator

./: .editorconfig  .eslintrc.js  .flowconfig  .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  package-lock.json  package.json  postinstall.sh  sdex_logic.py
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json
app/: App.js
app/api/: index.js
app/environments/: firebase.js
app/store/: rootReducer.js  store.js
app/utils/: string.js
docs/diagrams/: app-views-map.drawio
docs/diagramy/: actual-flow.drawio  diagramy procesow (funkcjonalności) aplikacji.drawio  diagramy-inzynierka.drawio  nowe-diagramy.drawio  wymiana-kodow-qr.drawio
ios/: Podfile
ios/Pulse/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/Pulse.xcodeproj/: project.pbxproj
ios/PulseTests/: PulseTests.m
sdex-encrypted-communicator/: .editorconfig  .env  .eslintignore  .eslintrc.json  .gitignore  .pnp.cjs  .pnp.loader.mjs  .prettierrc  App.js  App.tsx  ErrorMessages.ts  Logger.ts  Messages.ts  README.md  Styles.ts  Types.ts  app.json  babel.config.js  crypto.ts  declarations.d.ts  eas.json  errorMessages.ts  errors.ts  index.js  localStorage.ts  metro.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  test.tsconfig.json  tsconfig.json  tslint.json  types.ts
sdex-encrypted-communicator/android/: settings.gradle
sdex-encrypted-communicator/assets/: SqlDbTemplate.db
sdex-encrypted-communicator/components/: AppNavigator.js  AppNavigatorContainer.js  AuthContext.js  AuthContext.ts  Buttons.ts  ChatComponent.js  ChatRoom.js  Contexts.ts  Errors.ts  Logger.ts  MessageComponent.js  Messages.ts  Modal.js  Modal.tsx  QR.js  QR.tsx  Qr.tsx  Types.ts
sdex-encrypted-communicator/crypto/: RsaCrypto.ts  SdexCrypto.ts
sdex-encrypted-communicator/databases/: DataHandlers.ts  SecureStoreMiddlewares.ts  SqlStorageMiddlewares.ts  asyncStorageMiddlewares.ts  dataHandlers.ts
sdex-encrypted-communicator/fixtures/: crypto.ts
sdex-encrypted-communicator/jest/: setup.js
server/: .coverage  .env-example  Makefile  README.md  database.db  id_rsa  id_rsa.pub  pyproject.toml
server/src/: exceptions.py  main.py  settings.py  socket_manager.py
server/src/api/: endpoints.py  models.py
server/src/database/: database.py  models.py
server/src/sdex_server/: exceptions.py  logger.py  main.py  messages.py  settings.py  state.py  type_definitions.py
server/src/sdex_server/connection/: models.py  payload_sanitizers.py
server/src/sdex_server/crypto/: randomness.py
server/src/sdex_server/database/: database.py  models.py
server/tests/: conftest.py
server/tests/integration/: conftest.py
server/tests/resources/: test-db.db
server/tests/unit/: conftest.py  test_socket_manager.py
server/tests/unit/database/: test_database.py
(+171 files in other folders)
